# fake-instagram

./: CMakeLists.txt  backend.cpp  backend.h  db.sqlite3  main.cpp  releaseNotes.txt
controllers/: controller.cpp  controller.h
models/: follow.cpp  follow.h  like.cpp  like.h  post.cpp  post.h  user.cpp  user.h
